--- a/Node.Api/appsettings.json
+++ b/Node.Api/appsettings.json
@@ -1,4 +1,9 @@
 ﻿{
+  "App": {
+    "About": "SoftUniChain/0.9-csharp",
+    "NodeUrl": "http://chain-node-03.herokuapp.com",
+    "Difficulty": 5
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
