Added logger in NodeService

--- a/Node.Api/appsettings.json
+++ b/Node.Api/appsettings.json
@@ -12,6 +12,7 @@
     },
     "Console": {
       "LogLevel": {
+        "Node.Api.Services.NodeService": "Information",
         "Default": "Warning"
       }
     }
