--- a/Node.Api/Node.Api.csproj
+++ b/Node.Api/Node.Api.csproj
@@ -14,8 +14,9 @@
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00795" />
   </ItemGroup>
 
   <ItemGroup>
