--- a/Miner.Console/Miner.Console.csproj
+++ b/Miner.Console/Miner.Console.csproj
@@ -5,5 +5,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="Serilog" Version="2.7.1-dev-00960" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00795" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.Library\Infrastructure.Library.csproj" />
   </ItemGroup>
 </Project>
