--- a/Miner.Console/Miner.Console.csproj
+++ b/Miner.Console/Miner.Console.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="Serilog" Version="2.7.1-dev-00960" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
@@ -11,5 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure.Library\Infrastructure.Library.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.DependencyInjection">
+      <HintPath>..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection\2.0.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
