Added hash verification on server

--- a/Node.Api/appsettings.json
+++ b/Node.Api/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "App": {
     "About": "SoftUniChain/0.9-csharp",
-    "Difficulty": 5,
-    "MinerReward": 43
+    "Difficulty": 3,
+    "MinerReward": 4300000
   }
 }
