--- a/Node.Api/appsettings.json
+++ b/Node.Api/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "App": {
-    "About": "SoftUniChain/0.9-csharp",
+    "About": "SimpleBlockchain/0.1-csharp",
     "Difficulty": 5,
-    "MinerReward": 4300000
+    "MinerReward": 15000000
   }
 }
