Fix block notify endpoint

--- a/Node.Api/appsettings.json
+++ b/Node.Api/appsettings.json
@@ -2,6 +2,7 @@
   "App": {
     "About": "SimpleBlockchain/0.1-csharp",
     "Difficulty": 5,
-    "MinerReward": 15000000
+    "MinerReward": 15000000,
+    "NodeUrl": "http://node.url"
   }
 }
